refactor: change in openAPI for specimen DTO refactor: getSex,getProducer etc. will now return a String and not an Object since usually the Object itself is not needed. feat: Growlist of an user will now be converted to the DTO and returned fix: GrowlistRepository custom query refactor: GrowListRepository --> GrowlistRepository
