# nepflow/src/main/java/com/nepflow/GrowlistManagement/Controller/GrowlistmanagementApi.java
@@ -8,7 +8,6 @@ package com.nepflow.GrowlistManagement.Controller;
 import com.nepflow.GrowlistManagement.Dto.CloneType;
 import com.nepflow.GrowlistManagement.Dto.GrowlistDTO;
 import com.nepflow.GrowlistManagement.Dto.LabelCloneDTO;
-import com.nepflow.GrowlistManagement.Dto.LabelSpecimenDTO;
 import com.nepflow.GrowlistManagement.Dto.SpecimenCloneDTO;
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
 import io.swagger.v3.oas.annotations.Operation;
@@ -32,7 +31,7 @@ import java.util.List;
 import java.util.Map;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2024-06-26T22:21:12.014973900+02:00[Europe/Berlin]", comments = "Generator version: 7.6.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2024-07-01T18:41:42.843846800+02:00[Europe/Berlin]", comments = "Generator version: 7.6.0")
 @Validated
 @Tag(name = "Growlistmanagement", description = "the Growlistmanagement API")
 public interface GrowlistmanagementApi {
@@ -138,7 +137,7 @@ public interface GrowlistmanagementApi {
      * PUT /growlist/clones/{specimenId} : update values
      *
      * @param specimenId  (required)
-     * @param labelSpecimenDTO  (optional)
+     * @param specimenCloneDTO  (optional)
      * @return OK (status code 200)
      *         or Could not update Specimen (status code 500)
      */
@@ -148,7 +147,7 @@ public interface GrowlistmanagementApi {
         tags = { "Growlistmanagement" },
         responses = {
             @ApiResponse(responseCode = "200", description = "OK", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = LabelSpecimenDTO.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = SpecimenCloneDTO.class))
             }),
             @ApiResponse(responseCode = "500", description = "Could not update Specimen")
         }
@@ -160,11 +159,11 @@ public interface GrowlistmanagementApi {
         consumes = { "application/json" }
     )
     
-    default ResponseEntity<LabelSpecimenDTO> growlistClonesSpecimenIdPut(
+    default ResponseEntity<SpecimenCloneDTO> growlistClonesSpecimenIdPut(
         @Parameter(name = "specimenId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("specimenId") String specimenId,
-        @Parameter(name = "LabelSpecimenDTO", description = "") @Valid @RequestBody(required = false) LabelSpecimenDTO labelSpecimenDTO
+        @Parameter(name = "SpecimenCloneDTO", description = "") @Valid @RequestBody(required = false) SpecimenCloneDTO specimenCloneDTO
     ) {
-        return getDelegate().growlistClonesSpecimenIdPut(specimenId, labelSpecimenDTO);
+        return getDelegate().growlistClonesSpecimenIdPut(specimenId, specimenCloneDTO);
     }
 
 
